# desAInz

./: .dockerignore  .env.dev.example  .env.example  .env.prod.example  .env.quickstart.example  .env.staging.example  .eslintrc.js  .flake8  .flowconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .stylelintignore  .stylelintrc  .stylelintrc.json  CHANGELOG.md  CONTRIBUTING.md  Design Idea Engine - Project Summary.md  DesignIdeaEngineBlueprint.md  Dockerfile  Makefile  README.md  SECURITY.md  SUPPORT.md  TODO.md  cliff.toml  conftest.py  docker-compose.dev.yml  docker-compose.override.test.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.tracing.yml  docker-compose.yml  eslint.config.cjs  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  (+3 more)
.github/: dependabot.yml  pull_request_template.md
backend/: .env.example  __init__.py  mypy.ini
backend/api-gateway/: .dockerignore  .env.example  .env.quickstart.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/api-gateway/docs/: conf.py  index.rst
backend/api-gateway/src/api_gateway/: __init__.py  audit.py  auth.py  main.py  models.py  rate_limiter.py  routes.py  settings.py
backend/api-gateway/tests/: test_approvals.py  test_audit.py  test_audit_logs.py  test_auth.py  test_exports.py  test_feature_flags.py  test_gateway_timeout.py  test_health.py  test_maintenance.py  test_metrics_endpoint.py  test_metrics_ws.py  test_privacy_endpoint.py  test_rate_limit.py  test_roles.py  test_routes.py  test_security_headers.py  test_trending.py  test_trpc_etag.py  test_ws_metrics.py
backend/marketplace-publisher/: .env.example  .env.quickstart.example  Dockerfile  README.md  pyproject.toml
backend/marketplace-publisher/config/: marketplace_rules.yaml
backend/marketplace-publisher/src/marketplace_publisher/: __init__.py  clients.py  db.py  feature_flags.py  flags.py  main.py  notifications.py  pricing.py  publisher.py  rate_limiter.py  rules.py  rules.yaml  settings.py  trademark.py
backend/marketplace-publisher/tests/: __init__.py  test_api.py  test_clients.py  test_feature_flags.py  test_listings.py  test_metrics.py  test_notifications.py  test_policy_failures.py  test_pricing.py  test_publish_metrics.py  test_publisher.py  test_rate_limit.py  test_retry.py  test_rules_reload.py  test_selenium_fallback.py  test_trademark.py  test_validation.py
backend/marketplace-publisher/tests/validators/: test_marketplace_settings.py
backend/marketplace-publisher/tests/vcr/: __init__.py  test_clients_vcr.py  test_httpbin.py
backend/marketplace-publisher/tests/vcr/cassettes/: amazon_merch_client.yaml  etsy_client.yaml  redbubble_client.yaml  society6_client.yaml  zazzle_client.yaml
backend/marketplace-publisher/tests/vcr/cassettes/test_httpbin/: test_httpbin.yaml
backend/monitoring/: .env.example  .env.quickstart.example  Dockerfile  README.md  app.py  main.py  metrics.py  pyproject.toml  requirements.txt
backend/monitoring/src/monitoring/: __init__.py  analytics.py  logging_config.py  main.py  metrics_store.py  pagerduty.py  settings.py
backend/monitoring/tests/: test_api_routes.py  test_app.py  test_metrics_store.py  test_monitoring_timeout.py  test_pagerduty.py  test_pagerduty_cooldown.py  test_queue_backlog.py
backend/monitoring/tests/validators/: test_monitoring_settings.py
backend/service-template/: .env.example  .env.quickstart.example  pyproject.toml
backend/service-template/src/: logging_config.py  main.py  settings.py
backend/signal-ingestion/: .dockerignore  .env.example  .env.quickstart.example  Dockerfile  README.md  pyproject.toml
backend/signal-ingestion/src/signal_ingestion/: celery_app.py  database.py  dedup.py  embedding.py  errors.py  ingestion.py  logging_config.py  main.py  models.py  normalization.py  privacy.py  publisher.py  purge_pii.py  rate_limit.py  retention.py  scheduler.py  settings.py  tasks.py  trending.py
backend/signal-ingestion/src/signal_ingestion/adapters/: base.py  events.py  instagram.py  nostalgia.py  reddit.py  tiktok.py  youtube.py
backend/signal-ingestion/tests/: factories.py  test_adapter_timeout.py  test_adapters.py  test_concurrency.py  test_dedup.py  test_duplicate_detection.py  test_etag_cache.py  test_normalization.py  test_parallel_ingestion.py  test_privacy.py  test_purge_pii.py  test_rate_limit.py  test_retention.py  test_scheduler.py  test_startup.py  test_trending.py
backend/signal-ingestion/tests/cassettes/: events.yaml  events_real.yaml  instagram.yaml  nostalgia.yaml  nostalgia_real.yaml  reddit.yaml  reddit_real.yaml  tiktok.yaml  tiktok_real.yaml  youtube.yaml  youtube_real.yaml
backend/signal-ingestion/tests/validators/: test_signal_settings.py
config/: marketplace_rules.yaml
desAInz/: __init__.py  sample.py
docker/: docker-compose.yml  register_schemas.sh
docs/: Makefile  README.md  admin_dashboard_trpc.md  api_gateway_exports.md  api_gateway_sidecar.rst  api_reference.rst  architecture.rst  backup.md  cloud_deployment.md  conf.py  configuration.md  currency_conversion.md  daily_summary.md  deployment.md  error_triage.md  feature-flags.md  i18n.md  implementation_plan.md  index.rst  listing_sync.md  load_testing.md  logs_with_loki.md  maintenance.md  manual_publish.rst  marketplace_file_sizes.md  (+24 more)
(+945 files in other folders)
