[tool.poetry]
name = "api-gateway"
version = "0.1.0"
description = "API Gateway microservice"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110"
uvicorn = {extras = ["standard"], version = "^0.29"}
uvloop = "*"
python-jose = {extras = ["cryptography"], version = "^3.3"}
brotli-asgi = "^1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
pytest-asyncio = "^0.23"
httpx = "^0.27"
flake8 = "^7.0"
black = "^24.3"
mypy = "^1.9"
docformatter = "^1.7"
flake8-docstrings = "^1.7"
pydocstyle = "^6.3"
types-python-jose = "^3.3"
sphinx = "^7.2"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
